tests/negative/syntax/missing_rparen/input.ci
void main() {
    if (true {
        print("x\n");
    }
}
